profile_format.css
:root {
    --profile-pic-size: 250px;

    --profile-pic-left-pos: 80px;
    --profile-pic-top-pos: -130px;
}

#profile-container {
    margin-left: calc(var(--nav_width) + (var(--container_pad) * 2));
    margin-top: var(--sticky_height);

    font-family: Verdana;
    font-size: 13px;
}

#cover-photo {
    width: 100%;
    height: 310px;

    background-image: url(profile_pics/cover_pics/group_dogs.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;

    z-index: -1;
}

#profile-name-content {
    width: 100%;
    height: calc((var(--profile-pic-size) / 2));

    background-color: white;

    position: relative;

    font-family: Verdana;
    font-size: 50px;
    font-weight: bold;

    display: flex;
    align-items: center;
    flex-wrap: wrap;

    border-bottom: 1px solid gainsboro;
}
#profile-name-content p {
    margin: 0;
    padding: 0;
    margin-left: calc(var(--profile-pic-left-pos) + var(--profile-pic-size) + 10px);
}

#profile-picture-container {
    background-color: white;
    
    position: absolute;

    height: var(--profile-pic-size);
    width: var(--profile-pic-size);
    border-radius: var(--profile-pic-size);

    left: var(--profile-pic-left-pos);
    top: var(--profile-pic-top-pos);

    display: flex;
    align-items: center;
    justify-content: center;

}
#profile-picture-container img {
    object-fit: cover;

    height: calc(var(--profile-pic-size) - 20px);
    width: calc(var(--profile-pic-size) - 20px);
    border-radius: calc(var(--profile-pic-size) - 20px);

    margin: auto;

}

#profile-content {
    width: calc(100% - (var(--content_padding) * 2));

    position: relative;

    display: flex;
    flex-direction: row;

    justify-content: space-between;

    padding-left: var(--content_padding);
    padding-right: var(--content_padding);
}

#posts-header {
    margin-left: var(--content_padding);
}

#user-posts {
    width: calc(70%);

    display: flex;

    flex-direction: column;
}

#user-stats {
    display: flex;
    flex-direction: column;
    position: sticky;
    top: calc(var(--sticky_height) + 15px);

    width: calc(28% - (var(--container_pad) * 2));
    height: 100px;

    padding: var(--container_pad) var(--container_pad) var(--container_pad) var(--container_pad);

    background-color: white;
    border: 1px solid gainsboro;
}
#name {
    height: 70%;

    display: flex;
    align-items: center;
}
#number-row {
    display: flex;
    flex-direction: row;

    margin-top: 10px;

    height: 30%;

    justify-content: space-around;
}
#number-row .stat-container {
    width: 50%;
    padding-left: 10px;
}

